# project_euler

./: README
C/: README
C/001/: CMakeLists.txt  euler1.c  help.txt
C/002/: CMakeLists.txt  euler2.c
C/003/: CMakeLists.txt  euler3.c
C/004/: CMakeLists.txt  euler4.c
C/005/: CMakeLists.txt  euler5.c  listTest.c  primesTest.c  stackTest.c
C/005/list/: CMakeLists.txt
C/005/list/include/list/: list.h
C/005/list/src/: list.c
C/005/primes/: CMakeLists.txt
C/005/primes/include/primes/: primes.h
C/005/primes/src/: primes.c
C/005/stack/include/stack/: stack.h
C/005/stack/src/: stack.c
C/006/: .gitignore  CMakeLists.txt  euler6.c
C/007/: CMakeLists.txt  euler7.c
C/008/: CMakeLists.txt  euler8.c
C/009/: CMakeLists.txt  euler9.c
C/010/: CMakeLists.txt  euler10.c
C/011/: CMakeLists.txt  euler11.c  matrix.txt
C/012/: CMakeLists.txt  euler12.c
C/013/: CMakeLists.txt  euler13.c  shortDigits.txt
C/013/stringmath/: CMakeLists.txt
C/013/stringmath/src/: add.c
C/014/: CMakeLists.txt  euler14.c
C/015/: CMakeLists.txt  euler15.c
C/016/: CMakeLists.txt  euler16.c
C/016/stringmath/: CMakeLists.txt
C/016/stringmath/include/stringmath/: add.h  multiply.h
C/016/stringmath/src/: add.c  multiply.c
C/017/: CMakeLists.txt  euler17.c
C/018/: CMakeLists.txt  euler18.c
C/019/: CMakeLists.txt  euler19.c
C/020/: CMakeLists.txt  euler20.c
C/021/: CMakeLists.txt  euler21.c
C/022/: CMakeLists.txt  euler22.c  small.txt
C/023/: CMakeLists.txt  euler23.c
C/024/: CMakeLists.txt  euler24.c
C/025/: CMakeLists.txt  euler25.c
(+76 files in other folders)
